Deploy cards-1, modal-1 sections and refactoring

--- a/about-1--2.html
+++ b/about-1--2.html
@@ -7,26 +7,26 @@
     <link rel="stylesheet" href="./assets/styles/about-1--2.css">
   </head>
   <body>
-    <!-- Для About-2 добавить к about about_2-->
+    <!-- Для about-1--2 добавить к about about-1--2_2-->
     <!-- !!!Theme-->
     <!-- Добавить к block класс block_dark-->
     <!-- Заменить класс btn_black на btn_white-->
-    <section class="about section block">
-      <div class="about__container container"> 
-        <div class="about__content">
-          <div class="about__text-block">
-            <div class="about__title-block"> <span class="about__subtitle">Our studio</span>
-              <h2 class="about__title">Design that influences how people work, learn, live and experience the world. </h2>
+    <section class="about-1--2 section block">
+      <div class="about-1--2__container container"> 
+        <div class="about-1--2__content">
+          <div class="about-1--2__text-block">
+            <div class="about-1--2__title-block"> <span class="about-1--2__subtitle">Our studio</span>
+              <h2 class="about-1--2__title">Design that influences how people work, learn, live and experience the world. </h2>
             </div>
-            <div class="about__desc"> 
+            <div class="about-1--2__desc"> 
               <p>Dolor enim eu tortor urna sed duis nulla. Aliquam vestibulum, nulla odio nisl vitae. In aliquet pellentesque aenean hac vestibulum turpis mi bibendum diam. Tempor integer aliquam in vitae malesuada fringilla.</p>
               <p>Elit nisi in eleifend sed nisi. Pulvinar at orci, proin imperdiet commodo consectetur convallis risus. </p>
             </div>
           </div>
-          <button class="about__btn btn btn_all btn_extralarge btn_black" type="button">Get in touch </button>
+          <button class="about-1--2__btn btn btn_all btn_extralarge btn_black" type="button">Get in touch </button>
         </div>
-        <div class="about__img-block"> 
-          <picture class="about__img-wrap"> <img class="about__img" src="./assets/img/about/img-1.jpg" alt=""></picture>
+        <div class="about-1--2__img-block"> 
+          <picture class="about-1--2__img-wrap"> <img class="about-1--2__img" src="./assets/img/about/img-1.jpg" alt=""></picture>
         </div>
       </div>
     </section>
