--- a/benefits-4.html
+++ b/benefits-4.html
@@ -8,92 +8,92 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <section class="benefits section block">
-      <div class="benefits__container container"> 
-        <div class="benefits__text-block"> 
-          <div class="benefits__title-block"> <span class="benefits__subtitle">Features</span>
-            <h2 class="benefits__title">Analytics that feels like it’s from the future</h2>
+    <section class="benefits-4 section block">
+      <div class="benefits-4__container container"> 
+        <div class="benefits-4__text-block"> 
+          <div class="benefits-4__title-block"> <span class="benefits-4__subtitle">Features</span>
+            <h2 class="benefits-4__title">Analytics that feels like it’s from the future</h2>
           </div>
-          <p class="benefits__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
+          <p class="benefits-4__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
         </div>
-        <ul class="benefits__list">
-          <li class="benefits__item"> 
-            <div class="benefits__content"> 
-              <div class="benefits__content-text-block">
-                <h3 class="benefits__content-name">Share team inboxes</h3>
-                <p class="benefits__content-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
+        <ul class="benefits-4__list">
+          <li class="benefits-4__item"> 
+            <div class="benefits-4__content"> 
+              <div class="benefits-4__content-text-block">
+                <h3 class="benefits-4__content-name">Share team inboxes</h3>
+                <p class="benefits-4__content-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
               </div>
-              <ul class="benefits__content-list">
-                <li class="benefits__content-item"> 
-                  <svg class="benefits__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <ul class="benefits-4__content-list">
+                <li class="benefits-4__content-item"> 
+                  <svg class="benefits-4__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.25 6.75L9.75 17.25L4.5 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg><span>Leverage automation to move fast</span>
                 </li>
-                <li class="benefits__content-item"> 
-                  <svg class="benefits__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="benefits-4__content-item"> 
+                  <svg class="benefits-4__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.25 6.75L9.75 17.25L4.5 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg><span>Leverage automation to move fast</span>
                 </li>
-                <li class="benefits__content-item"> 
-                  <svg class="benefits__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="benefits-4__content-item"> 
+                  <svg class="benefits-4__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.25 6.75L9.75 17.25L4.5 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg><span>Leverage automation to move fast</span>
                 </li>
               </ul>
             </div>
-            <picture class="benefits__img-wrap"><img class="benefits__img" src="./assets/img/benefits/benefit-4.jpg" alt=""></picture>
+            <picture class="benefits-4__img-wrap"><img class="benefits-4__img" src="./assets/img/benefits/benefit-4.jpg" alt=""></picture>
           </li>
-          <li class="benefits__item"> 
-            <div class="benefits__content"> 
-              <div class="benefits__content-text-block">
-                <h3 class="benefits__content-name">Share team inboxes</h3>
-                <p class="benefits__content-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
+          <li class="benefits-4__item"> 
+            <div class="benefits-4__content"> 
+              <div class="benefits-4__content-text-block">
+                <h3 class="benefits-4__content-name">Share team inboxes</h3>
+                <p class="benefits-4__content-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
               </div>
-              <ul class="benefits__content-list">
-                <li class="benefits__content-item"> 
-                  <svg class="benefits__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <ul class="benefits-4__content-list">
+                <li class="benefits-4__content-item"> 
+                  <svg class="benefits-4__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.25 6.75L9.75 17.25L4.5 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg><span>Leverage automation to move fast</span>
                 </li>
-                <li class="benefits__content-item"> 
-                  <svg class="benefits__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="benefits-4__content-item"> 
+                  <svg class="benefits-4__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.25 6.75L9.75 17.25L4.5 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg><span>Leverage automation to move fast</span>
                 </li>
-                <li class="benefits__content-item"> 
-                  <svg class="benefits__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="benefits-4__content-item"> 
+                  <svg class="benefits-4__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.25 6.75L9.75 17.25L4.5 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg><span>Leverage automation to move fast</span>
                 </li>
               </ul>
             </div>
-            <picture class="benefits__img-wrap"><img class="benefits__img" src="./assets/img/benefits/benefit-4.jpg" alt=""></picture>
+            <picture class="benefits-4__img-wrap"><img class="benefits-4__img" src="./assets/img/benefits/benefit-4.jpg" alt=""></picture>
           </li>
-          <li class="benefits__item"> 
-            <div class="benefits__content"> 
-              <div class="benefits__content-text-block">
-                <h3 class="benefits__content-name">Share team inboxes</h3>
-                <p class="benefits__content-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
+          <li class="benefits-4__item"> 
+            <div class="benefits-4__content"> 
+              <div class="benefits-4__content-text-block">
+                <h3 class="benefits-4__content-name">Share team inboxes</h3>
+                <p class="benefits-4__content-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
               </div>
-              <ul class="benefits__content-list">
-                <li class="benefits__content-item"> 
-                  <svg class="benefits__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <ul class="benefits-4__content-list">
+                <li class="benefits-4__content-item"> 
+                  <svg class="benefits-4__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.25 6.75L9.75 17.25L4.5 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg><span>Leverage automation to move fast</span>
                 </li>
-                <li class="benefits__content-item"> 
-                  <svg class="benefits__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="benefits-4__content-item"> 
+                  <svg class="benefits-4__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.25 6.75L9.75 17.25L4.5 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg><span>Leverage automation to move fast</span>
                 </li>
-                <li class="benefits__content-item"> 
-                  <svg class="benefits__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="benefits-4__content-item"> 
+                  <svg class="benefits-4__content-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M20.25 6.75L9.75 17.25L4.5 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg><span>Leverage automation to move fast</span>
                 </li>
               </ul>
             </div>
-            <picture class="benefits__img-wrap"><img class="benefits__img" src="./assets/img/benefits/benefit-4.jpg" alt=""></picture>
+            <picture class="benefits-4__img-wrap"><img class="benefits-4__img" src="./assets/img/benefits/benefit-4.jpg" alt=""></picture>
           </li>
         </ul>
       </div>
