--- a/benefits-7.html
+++ b/benefits-7.html
@@ -8,124 +8,124 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <section class="benefits section block">
-      <div class="benefits__container container">
-        <div class="benefits__text-block"> 
-          <div class="benefits__title-block"> <span class="benefits__subtitle">Features</span>
-            <h2 class="benefits__title">Cutting-edge features for advanced analytics</h2>
+    <section class="benefits-7 section block">
+      <div class="benefits-7__container container">
+        <div class="benefits-7__text-block"> 
+          <div class="benefits-7__title-block"> <span class="benefits-7__subtitle">Features</span>
+            <h2 class="benefits-7__title">Cutting-edge features for advanced analytics</h2>
           </div>
-          <p class="benefits__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
+          <p class="benefits-7__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
         </div>
-        <div class="row benefits__desktop">
+        <div class="row benefits-7__desktop">
           <div class="col-4">
-            <ul class="benefits__list"> 
-              <li class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <ul class="benefits-7__list"> 
+              <li class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Share team inboxes</h3>
-                <p class="benefits__item-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
+                <h3 class="benefits-7__item-name">Share team inboxes</h3>
+                <p class="benefits-7__item-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
               </li>
-              <li class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <li class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Manage your team with reports</h3>
-                <p class="benefits__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
+                <h3 class="benefits-7__item-name">Manage your team with reports</h3>
+                <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
               </li>
-              <li class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <li class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Deliver instant answers</h3>
-                <p class="benefits__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
+                <h3 class="benefits-7__item-name">Deliver instant answers</h3>
+                <p class="benefits-7__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
               </li>
             </ul>
           </div>
           <div class="col-4">
-            <picture class="benefits__poster-wrap"> <img class="benefits__poster" src="./assets/img/benefits/benefit-7.jpg" alt=""></picture>
+            <picture class="benefits-7__poster-wrap"> <img class="benefits-7__poster" src="./assets/img/benefits/benefit-7.jpg" alt=""></picture>
           </div>
           <div class="col-4">
-            <ul class="benefits__list"> 
-              <li class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <ul class="benefits-7__list"> 
+              <li class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Manage your team with reports</h3>
-                <p class="benefits__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
+                <h3 class="benefits-7__item-name">Manage your team with reports</h3>
+                <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
               </li>
-              <li class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <li class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Connect with customers</h3>
-                <p class="benefits__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
+                <h3 class="benefits-7__item-name">Connect with customers</h3>
+                <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
               </li>
-              <li class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <li class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Connect with customers</h3>
-                <p class="benefits__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
+                <h3 class="benefits-7__item-name">Connect with customers</h3>
+                <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
               </li>
             </ul>
           </div>
         </div>
-        <div class="benefits__mobile">
-          <picture class="benefits__poster-wrap"> <img class="benefits__poster" src="./assets/img/benefits/benefit-7.jpg" alt=""></picture>
-          <ul class="row benefits__mobile-list">
+        <div class="benefits-7__mobile">
+          <picture class="benefits-7__poster-wrap"> <img class="benefits-7__poster" src="./assets/img/benefits/benefit-7.jpg" alt=""></picture>
+          <ul class="row benefits-7__mobile-list">
             <li class="col-6 col-sm">
-              <div class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Share team inboxes</h3>
-                <p class="benefits__item-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
+                <h3 class="benefits-7__item-name">Share team inboxes</h3>
+                <p class="benefits-7__item-desc">Whether you have a team of 2 or 200, our shared team inboxes keep everyone on the same page and in the loop.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Manage your team with reports</h3>
-                <p class="benefits__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
+                <h3 class="benefits-7__item-name">Manage your team with reports</h3>
+                <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Deliver instant answers</h3>
-                <p class="benefits__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
+                <h3 class="benefits-7__item-name">Deliver instant answers</h3>
+                <p class="benefits-7__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Manage your team with reports</h3>
-                <p class="benefits__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
+                <h3 class="benefits-7__item-name">Manage your team with reports</h3>
+                <p class="benefits-7__item-desc">Measure what matters with Untitled’s easy-to-use reports. You can filter, export, and drilldown on the data in a couple clicks.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Connect with customers</h3>
-                <p class="benefits__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
+                <h3 class="benefits-7__item-name">Connect with customers</h3>
+                <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
               </div>
             </li>
             <li class="col-6 col-sm">
-              <div class="benefits__item">
-                <svg class="benefits__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="benefits-7__item">
+                <svg class="benefits-7__item-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
                 </svg>
-                <h3 class="benefits__item-name">Connect with customers</h3>
-                <p class="benefits__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
+                <h3 class="benefits-7__item-name">Connect with customers</h3>
+                <p class="benefits-7__item-desc">Solve a problem or close a sale in real-time with chat. If no one is available, customers are seamlessly routed to email without confusion.</p>
               </div>
             </li>
           </ul>
