--- a/breadcrumbs-1.html
+++ b/breadcrumbs-1.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <section class="breadcrumbs block">
-      <div class="container breadcrumbs__container"> 
-        <ul class="breadcrumbs__list"> 
-          <li class="breadcrumbs__item"> <a class="breadcrumbs__link" href="#">Главная</a></li>
-          <li class="breadcrumbs__item"> <a class="breadcrumbs__link" href="#">События </a></li>
-          <li class="breadcrumbs__item"> <a class="breadcrumbs__item" href="#">Анатолий Белый</a></li>
+    <section class="breadcrumbs-1 block">
+      <div class="container breadcrumbs-1__container"> 
+        <ul class="breadcrumbs-1__list"> 
+          <li class="breadcrumbs-1__item"> <a class="breadcrumbs-1__link" href="#">Главная</a></li>
+          <li class="breadcrumbs-1__item"> <a class="breadcrumbs-1__link" href="#">События </a></li>
+          <li class="breadcrumbs-1__item"> <a class="breadcrumbs-1__item" href="#">Анатолий Белый</a></li>
         </ul>
       </div>
     </section>
