--- a/cta-4.html
+++ b/cta-4.html
@@ -8,18 +8,18 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <section class="cta section block">
-      <div class="cta__container container"> 
-        <div class="cta__content"> 
-          <picture class="cta__bg-wrap"><img class="cta__bg" src="./assets/img/cta/img-4.jpg" alt=""></picture>
-          <div class="cta__content-inner">
-            <div class="cta__text-block">
-              <div class="cta__title-block"><span class="badge">New</span>
-                <h2 class="cta__title">Strong connection. Every direction.</h2>
+    <section class="cta-4 section block">
+      <div class="cta-4__container container"> 
+        <div class="cta-4__content"> 
+          <picture class="cta-4__bg-wrap"><img class="cta-4__bg" src="./assets/img/cta/img-4.jpg" alt=""></picture>
+          <div class="cta-4__content-inner">
+            <div class="cta-4__text-block">
+              <div class="cta-4__title-block"><span class="badge">New</span>
+                <h2 class="cta-4__title">Strong connection. Every direction.</h2>
               </div>
-              <p class="cta__desc">Create screens directly in Laurent or add your images from Sketch or Figma. You can even sync designs from your cloud storage!</p>
+              <p class="cta-4__desc">Create screens directly in Laurent or add your images from Sketch or Figma. You can even sync designs from your cloud storage!</p>
             </div>
-            <div class="cta__btn-block"> <a class="btn btn_large btn_black" href="#">
+            <div class="cta-4__btn-block"> <a class="btn btn_large btn_black" href="#">
                  Lean more  
                 <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6"></path>
