--- a/faq-1.html
+++ b/faq-1.html
@@ -10,12 +10,12 @@
   <body>
     <!-- Добавить к block класс block_dark-->
     <!-- Добавить к acc класс acc_dark-->
-    <section class="faq section block">
-      <div class="faq__container container">
-        <div class="faq__content"> 
-          <div class="faq__text-block"> 
-            <h2 class="faq__title">Frequently asked questions</h2>
-            <p class="faq__desc">Everything you need to know about the product and billing.</p>
+    <section class="faq-1 section block">
+      <div class="faq-1__container container">
+        <div class="faq-1__content"> 
+          <div class="faq-1__text-block"> 
+            <h2 class="faq-1__title">Frequently asked questions</h2>
+            <p class="faq-1__desc">Everything you need to know about the product and billing.</p>
           </div>
           <ul class="acc">
             <li class="acc__item"> 
