--- a/hero-6.html
+++ b/hero-6.html
@@ -9,14 +9,14 @@
   <body>
     <!-- Добавить к block класс block_dark-->
     <!-- Заменить класс btn_black на btn_white-->
-    <section class="hero section block">
-      <div class="container hero__container"> 
-        <picture class="hero__img-wrap"> <img class="hero__img" src="./assets/img/hero/bg-6.jpg" alt=""></picture>
-        <div class="hero__content"> 
-          <div class="hero__text-block"> 
-            <h2 class="hero__title">Анатолий Белый  </h2><span class="hero__subtitle">"Я здесь!"</span>
+    <section class="hero-6 section block">
+      <div class="container hero-6__container"> 
+        <picture class="hero-6__img-wrap"> <img class="hero-6__img" src="./assets/img/hero/bg-6.jpg" alt=""></picture>
+        <div class="hero-6__content"> 
+          <div class="hero-6__text-block"> 
+            <h2 class="hero-6__title">Анатолий Белый  </h2><span class="hero-6__subtitle">"Я здесь!"</span>
           </div>
-          <button class="hero__btn btn btn_extralarge btn_black">Купить билет</button>
+          <button class="hero-6__btn btn btn_extralarge btn_black">Купить билет</button>
         </div>
       </div>
     </section>
