--- a/menu-2.html
+++ b/menu-2.html
@@ -9,70 +9,70 @@
   <body>
     <!-- Добавить к block класс block_dark-->
     <!-- Заменить класс btn_black на btn_white-->
-    <section class="menu section block">
-      <div class="menu__container container"> 
-        <div class="menu__text-block"> <span class="menu__subtitle">Delicious</span>
-          <h2 class="menu__title">Weekly Lunch menu excerpt</h2>
+    <section class="menu-2 section block">
+      <div class="menu-2__container container"> 
+        <div class="menu-2__text-block"> <span class="menu-2__subtitle">Delicious</span>
+          <h2 class="menu-2__title">Weekly Lunch menu excerpt</h2>
         </div>
-        <div class="menu__content">
-          <picture class="menu__img-wrap"> <img class="menu__img" src="./assets/img/menu/menu-2.jpg" alt=""></picture>
-          <ul class="row menu__list">
+        <div class="menu-2__content">
+          <picture class="menu-2__img-wrap"> <img class="menu-2__img" src="./assets/img/menu/menu-2.jpg" alt=""></picture>
+          <ul class="row menu-2__list">
             <li class="col-4 col-lg-6 col-md">
-              <div class="menu__item">
-                <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+              <div class="menu-2__item">
+                <div class="menu-2__item-text-block"> <strong class="menu-2__item-name">Shrimp tacos</strong><span class="menu-2__item-price">12.95€ </span></div>
+                <p class="menu-2__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
               </div>
             </li>
             <li class="col-4 col-lg-6 col-md">
-              <div class="menu__item">
-                <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+              <div class="menu-2__item">
+                <div class="menu-2__item-text-block"> <strong class="menu-2__item-name">Shrimp tacos</strong><span class="menu-2__item-price">12.95€ </span></div>
+                <p class="menu-2__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
               </div>
             </li>
             <li class="col-4 col-lg-6 col-md">
-              <div class="menu__item">
-                <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+              <div class="menu-2__item">
+                <div class="menu-2__item-text-block"> <strong class="menu-2__item-name">Shrimp tacos</strong><span class="menu-2__item-price">12.95€ </span></div>
+                <p class="menu-2__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
               </div>
             </li>
             <li class="col-4 col-lg-6 col-md">
-              <div class="menu__item">
-                <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+              <div class="menu-2__item">
+                <div class="menu-2__item-text-block"> <strong class="menu-2__item-name">Shrimp tacos</strong><span class="menu-2__item-price">12.95€ </span></div>
+                <p class="menu-2__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
               </div>
             </li>
             <li class="col-4 col-lg-6 col-md">
-              <div class="menu__item">
-                <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+              <div class="menu-2__item">
+                <div class="menu-2__item-text-block"> <strong class="menu-2__item-name">Shrimp tacos</strong><span class="menu-2__item-price">12.95€ </span></div>
+                <p class="menu-2__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
               </div>
             </li>
             <li class="col-4 col-lg-6 col-md">
-              <div class="menu__item">
-                <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+              <div class="menu-2__item">
+                <div class="menu-2__item-text-block"> <strong class="menu-2__item-name">Shrimp tacos</strong><span class="menu-2__item-price">12.95€ </span></div>
+                <p class="menu-2__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
               </div>
             </li>
             <li class="col-4 col-lg-6 col-md">
-              <div class="menu__item">
-                <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+              <div class="menu-2__item">
+                <div class="menu-2__item-text-block"> <strong class="menu-2__item-name">Shrimp tacos</strong><span class="menu-2__item-price">12.95€ </span></div>
+                <p class="menu-2__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
               </div>
             </li>
             <li class="col-4 col-lg-6 col-md">
-              <div class="menu__item">
-                <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+              <div class="menu-2__item">
+                <div class="menu-2__item-text-block"> <strong class="menu-2__item-name">Shrimp tacos</strong><span class="menu-2__item-price">12.95€ </span></div>
+                <p class="menu-2__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
               </div>
             </li>
             <li class="col-4 col-lg-6 col-md">
-              <div class="menu__item">
-                <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+              <div class="menu-2__item">
+                <div class="menu-2__item-text-block"> <strong class="menu-2__item-name">Shrimp tacos</strong><span class="menu-2__item-price">12.95€ </span></div>
+                <p class="menu-2__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
               </div>
             </li>
           </ul>
-          <button class="menu__btn btn btn_large btn_black btn_all" type="button">View menu</button>
+          <button class="menu-2__btn btn btn_large btn_black btn_all" type="button">View menu</button>
         </div>
       </div>
     </section>
