--- a/menu-4.html
+++ b/menu-4.html
@@ -8,147 +8,147 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <section class="menu section block">
-      <div class="menu__container container"> 
-        <h2 class="menu__title">Weekly Lunch menu excerpt</h2>
-        <div class="menu__block"> 
-          <h3 class="menu__block-title">Mexican cuisine</h3>
-          <div class="row menu__block-list">
+    <section class="menu-4 section block">
+      <div class="menu-4__container container"> 
+        <h2 class="menu-4__title">Weekly Lunch menu excerpt</h2>
+        <div class="menu-4__block"> 
+          <h3 class="menu-4__block-title">Mexican cuisine</h3>
+          <div class="row menu-4__block-list">
             <div class="col-4 col-xl">
-              <picture class="menu__img-wrap"> <img class="menu__img" src="./assets/img/menu/menu-4.jpg" alt=""></picture>
+              <picture class="menu-4__img-wrap"> <img class="menu-4__img" src="./assets/img/menu/menu-4.jpg" alt=""></picture>
             </div>
             <div class="col-8 col-xl">
-              <ul class="row menu__list">
+              <ul class="row menu-4__list">
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="menu__block"> 
-          <h3 class="menu__block-title">Mexican cuisine</h3>
-          <div class="row menu__block-list">
+        <div class="menu-4__block"> 
+          <h3 class="menu-4__block-title">Mexican cuisine</h3>
+          <div class="row menu-4__block-list">
             <div class="col-4 col-xl menu__block-item-order">
-              <picture class="menu__img-wrap"> <img class="menu__img" src="./assets/img/menu/menu-4.jpg" alt=""></picture>
+              <picture class="menu-4__img-wrap"> <img class="menu-4__img" src="./assets/img/menu/menu-4.jpg" alt=""></picture>
             </div>
             <div class="col-8 col-xl">
-              <ul class="row menu__list">
+              <ul class="row menu-4__list">
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
               </ul>
             </div>
           </div>
         </div>
-        <div class="menu__block"> 
-          <h3 class="menu__block-title">Mexican cuisine</h3>
-          <div class="row menu__block-list">
+        <div class="menu-4__block"> 
+          <h3 class="menu-4__block-title">Mexican cuisine</h3>
+          <div class="row menu-4__block-list">
             <div class="col-4 col-xl">
-              <picture class="menu__img-wrap"> <img class="menu__img" src="./assets/img/menu/menu-4.jpg" alt=""></picture>
+              <picture class="menu-4__img-wrap"> <img class="menu-4__img" src="./assets/img/menu/menu-4.jpg" alt=""></picture>
             </div>
             <div class="col-8 col-xl">
-              <ul class="row menu__list">
+              <ul class="row menu-4__list">
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
                 <li class="col-6 col-md">
-                  <div class="menu__item">
-                    <div class="menu__item-text-block"> <strong class="menu__item-name">Shrimp tacos</strong><span class="menu__item-price">12.95€ </span></div>
-                    <p class="menu__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
+                  <div class="menu-4__item">
+                    <div class="menu-4__item-text-block"> <strong class="menu-4__item-name">Shrimp tacos</strong><span class="menu-4__item-price">12.95€ </span></div>
+                    <p class="menu-4__item-desc">Shrimps, lettuce, cucumbers, sauce, tomatoes, cheese, herbs, corn, cabbage, beans</p>
                   </div>
                 </li>
               </ul>
