--- a/text-1.html
+++ b/text-1.html
@@ -8,21 +8,21 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <!-- Блок ограничен по ширине 850px. При необходимости 100% ширины блока добавить text__content класс text__content_full-->
-    <section class="text section block">
-      <div class="container text__container"> 
-        <div class="text__content">
-          <div class="text__block">
-            <div class="text__desc">
+    <!-- Блок ограничен по ширине 850px. При необходимости 100% ширины блока добавить text-1__content класс text-1__content_full-->
+    <section class="text-1 section block">
+      <div class="container text-1__container"> 
+        <div class="text-1__content">
+          <div class="text-1__block">
+            <div class="text-1__desc">
               <p>Спектакль «Я здесь» в Германии, билеты на который предлагает заказать онлайн наш специализированный сайт, является новым творческим проектом Анатолия Белого. Он не сможет оставить равнодушным и заставит задуматься каждого отдельного зрителя. Перед нами появляется то ли лишний человек, не единожды воспетый лучшими представителями классической отечественной литературы, то ли один из ярких представителей так называемого потерянного поколения. </p>
               <p>Однако не имеет значение личное восприятие героя, он в любом случае сразу же становится по-настоящему своим. Словно случайно он попал в зрительный зал и решил рассказать историю своей жизни, запинаясь и заговариваясь, нервничая и местами торопясь. Но ему необходимо высказаться, иначе он не выдержит внутреннего душевного напряжения.</p>
             </div>
           </div>
-          <div class="text__block">
-            <picture class="text__img-wrap"> <img class="text__img" src="./assets/img/text/poster.jpg" alt=""></picture>
+          <div class="text-1__block">
+            <picture class="text-1__img-wrap"> <img class="text-1__img" src="./assets/img/text/poster.jpg" alt=""></picture>
           </div>
-          <div class="text__block"><strong class="text__title">«Я здесь» – история одного человека.</strong>
-            <div class="text__desc">
+          <div class="text-1__block"><strong class="text-1__title">«Я здесь» – история одного человека.</strong>
+            <div class="text-1__desc">
               <p>Спектакль Анатолия Белого «Я здесь» в Германии является совместным творением актера со знаменитым режиссером Егором Трухиным. В нем поразительным образом гармонично переплетаются стихи современных авторов и драматургия классического театрального представления. И все это при непосредственном общении со зрителем, с отсылками к произведениям лучших представителей жанра. Именно поэтому спектакль «Я здесь» в Берлине или другом городе Германии стоит в обязательном порядке посетить тем, кто давно находится за пределами родины.  </p>
               <p>Он будет представлен с 11 по 17 апреля 2023 года не только в столице, но и в:  </p>
               <p>Гамбурге и Кельне; </p>
@@ -30,8 +30,8 @@
               <p>Важной особенностью спектакля является выраженная эмоциональная составляющая. В определенный момент перед зрителем предстает «обнаженный человек», играющий свою роль на надрыве (как в хорошем кино). И сразу становится непонятным – это еще герой спектакля, или монолог уже звучит в нашей собственной голове. Артиста можно без преувеличения назвать человеком, который на глазах публики собирает себя из осколков. Он играет не только словами и жестами, но и интонациями. При этом внезапная смена тем делает представление живым. Жизнь, как витраж, складывается из огромного количества осколков различных цветов и оттенков, а выбрать жить – значит суметь самостоятельно собрать себя целиком. </p>
             </div>
           </div>
-          <div class="text__block"><strong class="text__title">Стихи – важнейшая составляющая спектакля</strong>
-            <div class="text__desc">
+          <div class="text-1__block"><strong class="text-1__title">Стихи – важнейшая составляющая спектакля</strong>
+            <div class="text-1__desc">
               <p>Подбор стихотворных текстов для постановки «Я здесь» заслуживает особого внимания. Все они были написаны после 24 февраля 2022 года в различных уголках планеты, но с одной невыносимой болью. Каждое озвученное в спектакле стихотворение – это особый настрой, еще одна грань человеческой души: от ангельского залечивающего раны шепота до душераздирающего крика в полной тишине и мраке. </p>
               <p>И все же это, прежде всего, разговор о силе духа и размышлениях о любви, стремлении к свету и жизненной силе, которая способна победить даже самое страшное зло. Я здесь – говорит со сцены театра обычный человек, такой же простой и периодически наивный, как и миллионы других по всему миру. Его цель жить, несмотря на трагичность происходящих событий, ведь впереди свет и любовь. </p>
               <p>Чтобы заказать билеты на премьеру спектакля в любом из имеющихся в афише городов Германии, будет достаточно воспользоваться формой ниже. В случае необходимости консультанты сайта ответят на любые имеющиеся вопросы и помогут с выбором удобных мест в зале.   </p>
