--- a/benefits-8.html
+++ b/benefits-8.html
@@ -8,39 +8,39 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <section class="benefits section block block_dark">
-      <div class="benefits__container container">
-        <div class="benefits__text-block"> 
-          <div class="benefits__title-block"> <span class="benefits__subtitle">Features</span>
-            <h2 class="benefits__title">Cutting-edge features for advanced analytics</h2>
+    <section class="benefits-8 section block">
+      <div class="benefits-8__container container">
+        <div class="benefits-8__text-block"> 
+          <div class="benefits-8__title-block"> <span class="benefits-8__subtitle">Features</span>
+            <h2 class="benefits-8__title">Cutting-edge features for advanced analytics</h2>
           </div>
-          <p class="benefits__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
+          <p class="benefits-8__desc">Powerful, self-serve product and growth analytics to help you convert, engage, and retain more users. Trusted by over 4,000 startups.</p>
         </div>
-        <ul class="row benefits__list">
+        <ul class="row benefits-8__list">
           <li class="col-4 col-lg-6 col-sm">
-            <div class="benefits__item"> 
-              <picture class="benefits__item-img-wrap"><img class="benefits__item-img" src="./assets/img/benefits/benefit-8.jpg" alt=""></picture>
-              <div class="benefits__item-text-block">
-                <h3 class="benefits__item-name">Interior</h3>
-                <p class="benefits__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
+            <div class="benefits-8__item"> 
+              <picture class="benefits-8__item-img-wrap"><img class="benefits-8__item-img" src="./assets/img/benefits/benefit-8.jpg" alt=""></picture>
+              <div class="benefits-8__item-text-block">
+                <h3 class="benefits-8__item-name">Interior</h3>
+                <p class="benefits-8__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
               </div>
             </div>
           </li>
           <li class="col-4 col-lg-6 col-sm">
-            <div class="benefits__item"> 
-              <picture class="benefits__item-img-wrap"><img class="benefits__item-img" src="./assets/img/benefits/benefit-8.jpg" alt=""></picture>
-              <div class="benefits__item-text-block">
-                <h3 class="benefits__item-name">Cosiness</h3>
-                <p class="benefits__item-desc">You can even sync designs from your cloud storage!</p>
+            <div class="benefits-8__item"> 
+              <picture class="benefits-8__item-img-wrap"><img class="benefits-8__item-img" src="./assets/img/benefits/benefit-8.jpg" alt=""></picture>
+              <div class="benefits-8__item-text-block">
+                <h3 class="benefits-8__item-name">Cosiness</h3>
+                <p class="benefits-8__item-desc">You can even sync designs from your cloud storage!</p>
               </div>
             </div>
           </li>
           <li class="col-4 col-lg-6 col-sm">
-            <div class="benefits__item"> 
-              <picture class="benefits__item-img-wrap"><img class="benefits__item-img" src="./assets/img/benefits/benefit-8.jpg" alt=""></picture>
-              <div class="benefits__item-text-block">
-                <h3 class="benefits__item-name">Comfort</h3>
-                <p class="benefits__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
+            <div class="benefits-8__item"> 
+              <picture class="benefits-8__item-img-wrap"><img class="benefits-8__item-img" src="./assets/img/benefits/benefit-8.jpg" alt=""></picture>
+              <div class="benefits-8__item-text-block">
+                <h3 class="benefits-8__item-name">Comfort</h3>
+                <p class="benefits-8__item-desc">An all-in-one customer service platform that helps you balance everything your customers need to be happy.</p>
               </div>
             </div>
           </li>
