--- a/benefits-num-3.html
+++ b/benefits-num-3.html
@@ -8,27 +8,27 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <!-- Добавить к benefits-num__list класс .benefits-num__list_dark-->
-    <section class="benefits-num section block">
-      <div class="benefits-num__container container">
-        <div class="benefits-num__text-block">
-          <h2 class="benefits-num__title">Great products, faster than ever</h2>
-          <p class="benefits-num__desc">Everything you need to build modern UI and great products.</p>
+    <!-- Добавить к benefits-num-3__list класс benefits-num-3__list_dark-->
+    <section class="benefits-num-3 section block">
+      <div class="benefits-num-3__container container">
+        <div class="benefits-num-3__text-block">
+          <h2 class="benefits-num-3__title">Great products, faster than ever</h2>
+          <p class="benefits-num-3__desc">Everything you need to build modern UI and great products.</p>
         </div>
-        <ul class="row benefits-num__list">
+        <ul class="row benefits-num-3__list">
           <li class="col-4 col-md">
-            <div class="benefits-num__item"> 
-              <h3 class="benefits-num__name"> <span class="benefits-num__name_big">400+</span>Projects completed</h3>
+            <div class="benefits-num-3__item"> 
+              <h3 class="benefits-num-3__name"> <span class="benefits-num-3__name_big">400+</span>Projects completed</h3>
             </div>
           </li>
           <li class="col-4 col-md">
-            <div class="benefits-num__item"> 
-              <h3 class="benefits-num__name"> <span class="benefits-num__name_big">600%</span>Return on investment</h3>
+            <div class="benefits-num-3__item"> 
+              <h3 class="benefits-num-3__name"> <span class="benefits-num-3__name_big">600%</span>Return on investment</h3>
             </div>
           </li>
           <li class="col-4 col-md">
-            <div class="benefits-num__item"> 
-              <h3 class="benefits-num__name"> <span class="benefits-num__name_big">10k</span>Global downloads</h3>
+            <div class="benefits-num-3__item"> 
+              <h3 class="benefits-num-3__name"> <span class="benefits-num-3__name_big">10k</span>Global downloads</h3>
             </div>
           </li>
         </ul>
