--- a/blog-3-3.html
+++ b/blog-3-3.html
@@ -9,31 +9,31 @@
   <body>
     <!-- Добавить к block класс block_dark-->
     <!-- Заменить класс btn_black на btn_white-->
-    <section class="blog section block">
-      <div class="blog__container container"> 
-        <div class="blog__text-block"> 
-          <div class="blog__title-block"> <strong class="blog__subtitle">Latest posts</strong>
-            <h2 class="blog__title">Untitled blog</h2>
+    <section class="blog-3 section block">
+      <div class="blog-3__container container"> 
+        <div class="blog-3__text-block"> 
+          <div class="blog-3__title-block"> <strong class="blog-3__subtitle">Latest posts</strong>
+            <h2 class="blog-3__title">Untitled blog</h2>
           </div>
-          <p class="blog__title-desc">Interviews, tips, guides, industry best practices, and news.</p>
+          <p class="blog-3__title-desc">Interviews, tips, guides, industry best practices, and news.</p>
         </div>
-        <ul class="row blog__list">
+        <ul class="row blog-3__list">
           <li class="col-4 col-xl-6 col-md"> 
-            <div class="blog__item"><a class="blog__link" href="#"> 
-                <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
-                <div class="blog__item-content">
-                  <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
-                    <div class="blog__name-block">
-                      <h3 class="blog__name">UX review presentations
-                        <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="blog-3__item"><a class="blog-3__link" href="#"> 
+                <picture class="blog-3__img-wrap"> <img class="blog-3__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
+                <div class="blog-3__item-content">
+                  <div class="blog-3__item-text-block"><span class="blog-3__info">Olivia Rhye • 20 Jan 2022</span>
+                    <div class="blog-3__name-block">
+                      <h3 class="blog-3__name">UX review presentations
+                        <svg class="blog-3__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
                           <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
                         </svg>
                       </h3>
                     </div>
-                    <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
+                    <p class="blog-3__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
                   </div>
-                  <ul class="blog__badge-list">
+                  <ul class="blog-3__badge-list">
                     <li> <span class="badge">Presentation</span></li>
                     <li> <span class="badge">Presentation</span></li>
                     <li> <span class="badge">Research</span></li>
@@ -41,20 +41,20 @@
                 </div></a></div>
           </li>
           <li class="col-4 col-xl-6 col-md"> 
-            <div class="blog__item"><a class="blog__link" href="#"> 
-                <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
-                <div class="blog__item-content">
-                  <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
-                    <h3 class="blog__name">
+            <div class="blog-3__item"><a class="blog-3__link" href="#"> 
+                <picture class="blog-3__img-wrap"> <img class="blog-3__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
+                <div class="blog-3__item-content">
+                  <div class="blog-3__item-text-block"><span class="blog-3__info">Olivia Rhye • 20 Jan 2022</span>
+                    <h3 class="blog-3__name">
                        UX review presentations
-                      <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <svg class="blog-3__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
                         <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
                       </svg>
                     </h3>
-                    <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
+                    <p class="blog-3__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
                   </div>
-                  <ul class="blog__badge-list">
+                  <ul class="blog-3__badge-list">
                     <li> <span class="badge">Presentation</span></li>
                     <li> <span class="badge">Presentation</span></li>
                     <li> <span class="badge">Research</span></li>
@@ -62,21 +62,21 @@
                 </div></a></div>
           </li>
           <li class="col-4 col-xl-6 col-md"> 
-            <div class="blog__item"><a class="blog__link" href="#"> 
-                <picture class="blog__img-wrap"> <img class="blog__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
-                <div class="blog__item-content">
-                  <div class="blog__item-text-block"><span class="blog__info">Olivia Rhye • 20 Jan 2022</span>
-                    <div class="blog__name-block">
-                      <h3 class="blog__name">UX review presentations
-                        <svg class="blog__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="blog-3__item"><a class="blog-3__link" href="#"> 
+                <picture class="blog-3__img-wrap"> <img class="blog-3__img" src="./assets/img/blog/blog-3.jpg" alt=""></picture>
+                <div class="blog-3__item-content">
+                  <div class="blog-3__item-text-block"><span class="blog-3__info">Olivia Rhye • 20 Jan 2022</span>
+                    <div class="blog-3__name-block">
+                      <h3 class="blog-3__name">UX review presentations
+                        <svg class="blog-3__name_icon" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M5 15L15 5" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
                           <path d="M6.875 5H15V13.125" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"></path>
                         </svg>
                       </h3>
                     </div>
-                    <p class="blog__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
+                    <p class="blog-3__desc">How do you create compelling presentations that wow your colleagues and impress your managers?</p>
                   </div>
-                  <ul class="blog__badge-list">
+                  <ul class="blog-3__badge-list">
                     <li> <span class="badge">Presentation</span></li>
                     <li> <span class="badge">Presentation</span></li>
                     <li> <span class="badge">Research</span></li>
