--- a/contacts-2.html
+++ b/contacts-2.html
@@ -8,43 +8,43 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <section class="contacts section block">
-      <div class="contacts__container container">
-        <div class="contacts__text-block"> <span class="contacts__subtitle">Contact us</span>
-          <h2 class="contacts__title">We’d love to hear from you</h2>
-          <p class="contacts__desc">Our friendly team is always here to chat.</p>
+    <section class="contacts-2 section block">
+      <div class="contacts-2__container container">
+        <div class="contacts-2__text-block"> <span class="contacts-2__subtitle">Contact us</span>
+          <h2 class="contacts-2__title">We’d love to hear from you</h2>
+          <p class="contacts-2__desc">Our friendly team is always here to chat.</p>
         </div>
-        <ul class="row contacts__list">
+        <ul class="row contacts-2__list">
           <li class="col-4 col-lg-6 col-sm">
-            <div class="contacts__item"> 
-              <svg class="contacts__icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="contacts-2__item"> 
+              <svg class="contacts-2__icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
               </svg>
-              <div class="contacts__item-text-block">
-                <h3 class="contacts__name">Email</h3><span class="contacts__text">Our friendly team is here to help.</span>
-              </div><a class="contacts__info" href="mailto:hi@untitledui.com">hi@untitledui.com</a>
+              <div class="contacts-2__item-text-block">
+                <h3 class="contacts-2__name">Email</h3><span class="contacts-2__text">Our friendly team is here to help.</span>
+              </div><a class="contacts-2__info" href="mailto:hi@untitledui.com">hi@untitledui.com</a>
             </div>
           </li>
           <li class="col-4 col-lg-6 col-sm">
-            <div class="contacts__item"> 
-              <svg class="contacts__icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="contacts-2__item"> 
+              <svg class="contacts-2__icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
               </svg>
-              <div class="contacts__item-text-block">
-                <h3 class="contacts__name">Office</h3><span class="contacts__text">Come say hello at our office HQ.</span>
+              <div class="contacts-2__item-text-block">
+                <h3 class="contacts-2__name">Office</h3><span class="contacts-2__text">Come say hello at our office HQ.</span>
               </div>
-              <address class="contacts__info">
+              <address class="contacts-2__info">
                  100 Smith Street <br>Collingwood VIC 3066 AU</address>
             </div>
           </li>
           <li class="col-4 col-lg-6 col-sm">
-            <div class="contacts__item"> 
-              <svg class="contacts__icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="contacts-2__item"> 
+              <svg class="contacts-2__icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M22 30H12L26 2V18H36L22 46V30Z" fill="currentColor"></path>
               </svg>
-              <div class="contacts__item-text-block">
-                <h3 class="contacts__name">Phone</h3><span class="contacts__text">Mon-Fri from 8am to 5pm.</span>
-              </div><a class="contacts__info" href="tel:+15550000000">+1 (555) 000-0000</a>
+              <div class="contacts-2__item-text-block">
+                <h3 class="contacts-2__name">Phone</h3><span class="contacts-2__text">Mon-Fri from 8am to 5pm.</span>
+              </div><a class="contacts-2__info" href="tel:+15550000000">+1 (555) 000-0000</a>
             </div>
           </li>
         </ul>
