--- a/contacts-4.html
+++ b/contacts-4.html
@@ -8,85 +8,84 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <section class="contacts section block">
-      <div class="contacts__container container"> 
-        <div class="row contacts__container-inner">
-          <div class="col-6 col-lg"></div>
+    <section class="contacts-4 section block">
+      <div class="contacts-4__container container"> 
+        <div class="row contacts-4__container-inner">
           <div class="col-6 col-lg">
-            <div class="contacts__content"> 
-              <div class="contacts__block"> 
-                <h2 class="contacts__title">Kontakt</h2>
-                <ul class="contacts__list">
-                  <li class="contacts__item"> 
-                    <svg class="contacts__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="contacts-4__content"> 
+              <div class="contacts-4__block"> 
+                <h2 class="contacts-4__title">Kontakt</h2>
+                <ul class="contacts-4__list">
+                  <li class="contacts-4__item"> 
+                    <svg class="contacts-4__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M12 15C14.0711 15 15.75 13.3211 15.75 11.25C15.75 9.17893 14.0711 7.5 12 7.5C9.92893 7.5 8.25 9.17893 8.25 11.25C8.25 13.3211 9.92893 15 12 15Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M19.5 3.75H4.5C4.08579 3.75 3.75 4.08579 3.75 4.5V19.5C3.75 19.9142 4.08579 20.25 4.5 20.25H19.5C19.9142 20.25 20.25 19.9142 20.25 19.5V4.5C20.25 4.08579 19.9142 3.75 19.5 3.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M5.41797 20.2501C5.75784 18.7588 6.59412 17.4272 7.78981 16.4733C8.98549 15.5195 10.4697 15 11.9992 15C13.5288 15 15.0129 15.5195 16.2086 16.4733C17.4043 17.4272 18.2406 18.7588 18.5805 20.2501" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg><span class="contacts__text"><a href="#">Roberto Bossio</a></span>
+                    </svg><span class="contacts-4__text"><a href="#">Roberto Bossio</a></span>
                   </li>
-                  <li class="contacts__item"> 
-                    <svg class="contacts__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <li class="contacts-4__item"> 
+                    <svg class="contacts-4__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M20.25 20.249V10.8271C20.2483 10.7233 20.2259 10.6209 20.184 10.5259C20.1422 10.4309 20.0817 10.3453 20.0062 10.274L12.5062 3.45836C12.368 3.33187 12.1874 3.26172 12 3.26172C11.8126 3.26172 11.632 3.33187 11.4937 3.45836L3.99375 10.274C3.91828 10.3453 3.85783 10.4309 3.81597 10.5259C3.77411 10.6209 3.75168 10.7233 3.75 10.8271V20.249" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M1.5 20.25H22.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M14.25 20.25V15C14.25 14.8011 14.171 14.6103 14.0303 14.4697C13.8897 14.329 13.6989 14.25 13.5 14.25H10.5C10.3011 14.25 10.1103 14.329 9.96967 14.4697C9.82902 14.6103 9.75 14.8011 9.75 15V20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg><span class="contacts__text"><a href="#">Kurze Str. 3, 42551 Velbert </a></span>
+                    </svg><span class="contacts-4__text"><a href="#">Kurze Str. 3, 42551 Velbert </a></span>
                   </li>
-                  <li class="contacts__item"> 
-                    <svg class="contacts__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <li class="contacts-4__item"> 
+                    <svg class="contacts-4__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M8.67187 11.6998C9.44364 13.2935 10.7324 14.579 12.3281 15.3467C12.4458 15.4024 12.576 15.4265 12.7059 15.4167C12.8358 15.4068 12.9608 15.3633 13.0687 15.2904L15.4125 13.7248C15.516 13.6546 15.6357 13.6117 15.7603 13.6002C15.8849 13.5887 16.0104 13.609 16.125 13.6592L20.5125 15.5435C20.6625 15.6059 20.7877 15.7159 20.869 15.8565C20.9504 15.9971 20.9832 16.1606 20.9625 16.3217C20.8234 17.407 20.2937 18.4046 19.4723 19.1276C18.6509 19.8506 17.5943 20.2495 16.5 20.2498C13.1185 20.2498 9.87548 18.9065 7.48439 16.5154C5.0933 14.1243 3.75 10.8813 3.75 7.49979C3.75025 6.40553 4.1492 5.34886 4.87221 4.5275C5.59522 3.70613 6.59274 3.17635 7.67812 3.03729C7.83922 3.01659 8.00266 3.04943 8.14326 3.13074C8.28386 3.21206 8.39384 3.33733 8.45625 3.48729L10.3406 7.88416C10.3896 7.99699 10.4101 8.12013 10.4003 8.24275C10.3905 8.36537 10.3507 8.48369 10.2844 8.58729L8.71875 10.9685C8.64905 11.0762 8.60814 11.2 8.59993 11.328C8.59172 11.4561 8.61649 11.5841 8.67187 11.6998V11.6998Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg><span class="contacts__text"><a href="#">Tel.: 02051 / 52156</a></span>
+                    </svg><span class="contacts-4__text"><a href="#">Tel.: 02051 / 52156</a></span>
                   </li>
-                  <li class="contacts__item"> 
-                    <svg class="contacts__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <li class="contacts-4__item"> 
+                    <svg class="contacts-4__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M21 5.25L12 13.5L3 5.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M3 5.25H21V18C21 18.1989 20.921 18.3897 20.7803 18.5303C20.6397 18.671 20.4489 18.75 20.25 18.75H3.75C3.55109 18.75 3.36032 18.671 3.21967 18.5303C3.07902 18.3897 3 18.1989 3 18V5.25Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M10.3594 12L3.23438 18.5344" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M20.7656 18.5344L13.6406 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg><span class="contacts__text"><a href="#">info@centrostorico.de</a></span>
+                    </svg><span class="contacts-4__text"><a href="#">info@centrostorico.de</a></span>
                   </li>
                 </ul>
               </div>
-              <div class="contacts__block"> 
-                <h2 class="contacts__heading">Öffnungszeiten</h2>
-                <ul class="contacts__list">
-                  <li class="contacts__item"> 
-                    <svg class="contacts__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="contacts-4__block"> 
+                <h2 class="contacts-4__heading">Öffnungszeiten</h2>
+                <ul class="contacts-4__list">
+                  <li class="contacts-4__item"> 
+                    <svg class="contacts-4__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M19.5 3.75H4.5C4.08579 3.75 3.75 4.08579 3.75 4.5V19.5C3.75 19.9142 4.08579 20.25 4.5 20.25H19.5C19.9142 20.25 20.25 19.9142 20.25 19.5V4.5C20.25 4.08579 19.9142 3.75 19.5 3.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M16.5 2.25V5.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M7.5 2.25V5.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M3.75 8.25H20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M14.25 12L9.75 16.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M14.25 16.5L9.75 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg><span class="contacts__text">Dienstag: Ruhetag</span>
+                    </svg><span class="contacts-4__text">Dienstag: Ruhetag</span>
                   </li>
-                  <li class="contacts__item"> 
-                    <svg class="contacts__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <li class="contacts-4__item"> 
+                    <svg class="contacts-4__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M19.5 3.75H4.5C4.08579 3.75 3.75 4.08579 3.75 4.5V19.5C3.75 19.9142 4.08579 20.25 4.5 20.25H19.5C19.9142 20.25 20.25 19.9142 20.25 19.5V4.5C20.25 4.08579 19.9142 3.75 19.5 3.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M16.5 2.25V5.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M7.5 2.25V5.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M3.75 8.25H20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M15.375 12L10.9969 16.125L8.625 13.875" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg><span class="contacts__text">
-                       Mo. + Mi. - Do.+ So.: 17:00 - 23:30 Uhr<span class="contacts__text_small"><span>Mittag: 11:30 - 15:00 Uhr </span><span>Küche: bis 22:00 Uhr </span></span></span>
+                    </svg><span class="contacts-4__text">
+                       Mo. + Mi. - Do.+ So.: 17:00 - 23:30 Uhr<span class="contacts-4__text_small"><span>Mittag: 11:30 - 15:00 Uhr </span><span>Küche: bis 22:00 Uhr </span></span></span>
                   </li>
-                  <li class="contacts__item"> 
-                    <svg class="contacts__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <li class="contacts-4__item"> 
+                    <svg class="contacts-4__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M19.5 3.75H4.5C4.08579 3.75 3.75 4.08579 3.75 4.5V19.5C3.75 19.9142 4.08579 20.25 4.5 20.25H19.5C19.9142 20.25 20.25 19.9142 20.25 19.5V4.5C20.25 4.08579 19.9142 3.75 19.5 3.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M16.5 2.25V5.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M7.5 2.25V5.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M3.75 8.25H20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M15.375 12L10.9969 16.125L8.625 13.875" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                    </svg><span class="contacts__text">
-                       Fr. + Sa.: 17:00 - 00:00 Uhr<span class="contacts__text_small"><span>Mittag: 11:30 - 15:00 Uhr </span><span>Küche: bis 22:00 Uhr </span></span></span>
+                    </svg><span class="contacts-4__text">
+                       Fr. + Sa.: 17:00 - 00:00 Uhr<span class="contacts-4__text_small"><span>Mittag: 11:30 - 15:00 Uhr </span><span>Küche: bis 22:00 Uhr </span></span></span>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="col-6 col-lg"> 
-            <div class="contacts__map"> 
-              <picture class="contacts__img-wrap"> <img class="contacts__img" src="./assets/img/contacts/map-4.jpg" alt=""></picture>
-              <svg class="contacts__baloon" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="contacts-4__map"> 
+              <picture class="contacts-4__img-wrap"> <img class="contacts-4__img" src="./assets/img/contacts/map-4.jpg" alt=""></picture>
+              <svg class="contacts-4__baloon" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7 29H25" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                 <path d="M16 17C18.2091 17 20 15.2091 20 13C20 10.7909 18.2091 9 16 9C13.7909 9 12 10.7909 12 13C12 15.2091 13.7909 17 16 17Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                 <path d="M26 13C26 22 16 29 16 29C16 29 6 22 6 13C6 10.3478 7.05357 7.8043 8.92893 5.92893C10.8043 4.05357 13.3478 3 16 3C18.6522 3 21.1957 4.05357 23.0711 5.92893C24.9464 7.8043 26 10.3478 26 13V13Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
