--- a/cta-2.html
+++ b/cta-2.html
@@ -8,26 +8,26 @@
   </head>
   <body>
     <!-- Добавить к block класс block_dark-->
-    <!-- Добавить к cta__content класс cta__content_dark-->
+    <!-- Добавить к cta-2__content класс cta-2__content_dark-->
     <!-- Заменить класс btn_black на btn_white-->
     <!-- Заменить класс btn_trs-black на btn_trs-white-->
-    <section class="cta section block">
-      <div class="cta__container container"> 
-        <div class="row cta__list"> 
-          <div class="col-6 col-xl cta__item-order">
-            <div class="cta__content">
-              <div class="cta__text-block">
-                <h2 class="cta__title">Connected to what matters</h2>
-                <p class="cta__desc">The Develop in Swift guides are flexible enough to help you support students brand new to coding and those with advanced skills. The lessons provide practical experience developing apps with Swift in Xcode</p>
+    <section class="cta-2 section block">
+      <div class="cta-2__container container"> 
+        <div class="row cta-2__list"> 
+          <div class="col-6 col-xl cta-2__item-order">
+            <div class="cta-2__content">
+              <div class="cta-2__text-block">
+                <h2 class="cta-2__title">Connected to what matters</h2>
+                <p class="cta-2__desc">The Develop in Swift guides are flexible enough to help you support students brand new to coding and those with advanced skills. The lessons provide practical experience developing apps with Swift in Xcode</p>
               </div>
-              <div class="cta__btn-block"> 
+              <div class="cta-2__btn-block"> 
                 <button class="btn btn_extralarge btn_black" type="button">Let’s go </button>
                 <button class="btn btn_extralarge btn_trs-black" type="button">Lean more </button>
               </div>
             </div>
           </div>
           <div class="col-6 col-xl">
-            <picture class="cta__img-wrap"><img class="cta__img" src="./assets/img/cta/img-2.jpg" alt=""></picture>
+            <picture class="cta-2__img-wrap"><img class="cta-2__img" src="./assets/img/cta/img-2.jpg" alt=""></picture>
           </div>
         </div>
       </div>
