--- a/header-1-4.html
+++ b/header-1-4.html
@@ -11,48 +11,48 @@
     <!-- Добавить к block класс block_dark-->
     <!-- Добавить к select-nav класс select-nav_dark-->
     <!-- Заменить класс btn_black на btn_white-->
-    <!-- Добавить к header__burger класс header__burger_dark-->
-    <header class="header block">
-      <div class="header__inner">
-        <div class="header__container container"><a class="header__logo" href="#"> <img class="header__logo-img" src="http://via.placeholder.com/158x36" alt=""></a>
-          <nav class="header__nav"> 
-            <ul class="header__nav-list"> 
-              <li class="header__nav-item"> 
+    <!-- Добавить к header-1__burger класс header-1__burger_dark-->
+    <header class="header-1 block">
+      <div class="header-1__inner">
+        <div class="header-1__container container"><a class="header-1__logo" href="#"> <img class="header-1__logo-img" src="http://via.placeholder.com/158x36" alt=""></a>
+          <nav class="header-1__nav"> 
+            <ul class="header-1__nav-list"> 
+              <li class="header-1__nav-item"> 
                 <div class="select select-nav">
                   <div data-value="">Locations</div>
-                  <div data-value="link1"><a class="header__nav-link" href="#">Link 1</a></div>
-                  <div data-value="link2"><a class="header__nav-link" href="#">Link 2</a></div>
-                  <div data-value="link3"><a class="header__nav-link" href="#">Link 3</a></div>
-                  <div data-value="link4"><a class="header__nav-link" href="#">Link 4</a></div>
+                  <div data-value="link1"><a class="header-1__nav-link" href="#">Link 1</a></div>
+                  <div data-value="link2"><a class="header-1__nav-link" href="#">Link 2</a></div>
+                  <div data-value="link3"><a class="header-1__nav-link" href="#">Link 3</a></div>
+                  <div data-value="link4"><a class="header-1__nav-link" href="#">Link 4</a></div>
                 </div>
               </li>
-              <li class="header__nav-item"> <a class="header__nav-link" href="#">Restaurant</a></li>
-              <li class="header__nav-item"> 
+              <li class="header-1__nav-item"> <a class="header-1__nav-link" href="#">Restaurant</a></li>
+              <li class="header-1__nav-item"> 
                 <div class="select select-nav">
                   <div data-value="">Services</div>
-                  <div data-value="link1"><a class="header__nav-link" href="#">Link 1</a></div>
-                  <div data-value="link2"><a class="header__nav-link" href="#">Link 2</a></div>
+                  <div data-value="link1"><a class="header-1__nav-link" href="#">Link 1</a></div>
+                  <div data-value="link2"><a class="header-1__nav-link" href="#">Link 2</a></div>
                 </div>
               </li>
-              <li class="header__nav-item"> <a class="header__nav-link" href="#">Menu</a></li>
-              <li class="header__nav-item"> <a class="header__nav-link" href="#">Contacts</a></li>
+              <li class="header-1__nav-item"> <a class="header-1__nav-link" href="#">Menu</a></li>
+              <li class="header-1__nav-item"> <a class="header-1__nav-link" href="#">Contacts</a></li>
             </ul>
           </nav>
-          <div class="header__contacts"><a class="header__contacts-tel btn btn_medium" href="#">Call us</a>
-            <button class="header__contacts-btn btn btn_medium btn_black" type="button">
+          <div class="header-1__contacts"><a class="header-1__contacts-tel btn btn_medium" href="#">Call us</a>
+            <button class="header-1__contacts-btn btn btn_medium btn_black" type="button">
                Book a table
               <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path stroke="currentColor" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" d="M3.33398 7.99992H12.6673M12.6673 7.99992L8.00065 3.33325M12.6673 7.99992L8.00065 12.6666"></path>
               </svg>
             </button>
           </div>
-          <button class="header__contacts-btn header__contacts-btn_mobile btn btn_medium btn_black" type="button">
+          <button class="header-1__contacts-btn header-1__contacts-btn_mobile btn btn_medium btn_black" type="button">
              Book a table
             <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path stroke="currentColor" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round" d="M3.33398 7.99992H12.6673M12.6673 7.99992L8.00065 3.33325M12.6673 7.99992L8.00065 12.6666"></path>
             </svg>
           </button>
-          <button class="header__burger" type="button">   <span class="header__burger-item"></span><span class="header__burger-item"></span><span class="header__burger-item"></span></button>
+          <button class="header-1__burger" type="button">   <span class="header-1__burger-item"></span><span class="header-1__burger-item"></span><span class="header-1__burger-item"></span></button>
               <div class="menu">
                 <div class="menu__container container">
                   <nav class="menu__nav">
