--- a/hero-2.html
+++ b/hero-2.html
@@ -10,22 +10,22 @@
     <!-- Добавить к block класс block_dark-->
     <!-- Заменить класс btn_trs-black на btn_trs-white-->
     <!-- Заменить класс btn_black на btn_white-->
-    <section class="hero section block">
-      <div class="hero__container container">
-        <div class="hero__content">
-          <div class="hero__text-block">
-            <h2 class="hero__title">We design digital experiences that create more happy in the world</h2>
-            <p class="hero__desc">— We’re a full-service design and development agency who specialise in simple, useful and beautiful solutions.</p>
+    <section class="hero-2 section block">
+      <div class="hero-2__container container">
+        <div class="hero-2__content">
+          <div class="hero-2__text-block">
+            <h2 class="hero-2__title">We design digital experiences that create more happy in the world</h2>
+            <p class="hero-2__desc">— We’re a full-service design and development agency who specialise in simple, useful and beautiful solutions.</p>
           </div>
-          <div class="hero__btn-block"><a class="hero__btn btn btn_large btn_trs-black" href="#">
+          <div class="hero-2__btn-block"><a class="hero-2__btn btn btn_large btn_trs-black" href="#">
               <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M6 18L18 6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                 <path d="M8.25 6H18V15.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
               </svg>Showreel</a>
-            <button class="hero__btn btn btn_large btn_black" type="button">Get in touch</button>
+            <button class="hero-2__btn btn btn_large btn_black" type="button">Get in touch</button>
           </div>
         </div>
-        <picture class="hero__poster-wrap"><img class="hero__poster" src="./assets/img/hero/bg-2.jpg" alt=""></picture>
+        <picture class="hero-2__poster-wrap"><img class="hero-2__poster" src="./assets/img/hero/bg-2.jpg" alt=""></picture>
       </div>
     </section>
   </body>
