--- a/hero-4.html
+++ b/hero-4.html
@@ -9,17 +9,17 @@
   </head>
   <body>
     <!-- Темной темы тут нет-->
-    <section class="hero block">
-      <div class="hero__slider swiper">
+    <section class="hero-4--5 block">
+      <div class="hero-4--5__slider swiper">
         <ul class="swiper-wrapper"> 
           <li class="swiper-slide">
-            <div class="hero__item">
-              <picture class="hero__bg-wrap"><img class="hero__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
-              <div class="hero__content hero__content_center">
-                <div class="hero__text-block">
-                  <h2 class="hero__title">Welcome to our restaurant</h2>
-                  <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+            <div class="hero-4--5__item">
+              <picture class="hero-4--5__bg-wrap"><img class="hero-4--5__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
+              <div class="hero-4--5__content hero-4--5__content_center">
+                <div class="hero-4--5__text-block">
+                  <h2 class="hero-4--5__title">Welcome to our restaurant</h2>
+                  <p class="hero-4--5__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
+                </div><a class="hero-4--5__btn btn btn_large btn_white" href="#">Reserve a table 
                   <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                     <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -28,13 +28,13 @@
             </div>
           </li>
           <li class="swiper-slide">
-            <div class="hero__item">
-              <picture class="hero__bg-wrap"><img class="hero__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
-              <div class="hero__content hero__content_center">
-                <div class="hero__text-block">
-                  <h2 class="hero__title">Welcome to our restaurant</h2>
-                  <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+            <div class="hero-4--5__item">
+              <picture class="hero-4--5__bg-wrap"><img class="hero-4--5__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
+              <div class="hero-4--5__content hero-4--5__content_center">
+                <div class="hero-4--5__text-block">
+                  <h2 class="hero-4--5__title">Welcome to our restaurant</h2>
+                  <p class="hero-4--5__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
+                </div><a class="hero-4--5__btn btn btn_large btn_white" href="#">Reserve a table 
                   <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                     <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -43,13 +43,13 @@
             </div>
           </li>
           <li class="swiper-slide">
-            <div class="hero__item">
-              <picture class="hero__bg-wrap"><img class="hero__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
-              <div class="hero__content hero__content_center">
-                <div class="hero__text-block">
-                  <h2 class="hero__title">Welcome to our restaurant</h2>
-                  <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+            <div class="hero-4--5__item">
+              <picture class="hero-4--5__bg-wrap"><img class="hero-4--5__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
+              <div class="hero-4--5__content hero-4--5__content_center">
+                <div class="hero-4--5__text-block">
+                  <h2 class="hero-4--5__title">Welcome to our restaurant</h2>
+                  <p class="hero-4--5__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
+                </div><a class="hero-4--5__btn btn btn_large btn_white" href="#">Reserve a table 
                   <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                     <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -58,13 +58,13 @@
             </div>
           </li>
           <li class="swiper-slide">
-            <div class="hero__item">
-              <picture class="hero__bg-wrap"><img class="hero__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
-              <div class="hero__content hero__content_center">
-                <div class="hero__text-block">
-                  <h2 class="hero__title">Welcome to our restaurant</h2>
-                  <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+            <div class="hero-4--5__item">
+              <picture class="hero-4--5__bg-wrap"><img class="hero-4--5__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
+              <div class="hero-4--5__content hero-4--5__content_center">
+                <div class="hero-4--5__text-block">
+                  <h2 class="hero-4--5__title">Welcome to our restaurant</h2>
+                  <p class="hero-4--5__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
+                </div><a class="hero-4--5__btn btn btn_large btn_white" href="#">Reserve a table 
                   <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                     <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -73,7 +73,7 @@
             </div>
           </li>
         </ul>
-        <div class="hero__slider-pagination hero__slider-pagination_dark"></div>
+        <div class="hero-4--5__slider-pagination hero-4--5__slider-pagination_dark"></div>
       </div>
     </section>
   </body>
