--- a/hero-5.html
+++ b/hero-5.html
@@ -9,17 +9,17 @@
   </head>
   <body>
     <!-- Темной темы тут нет-->
-    <section class="hero block">
-      <div class="hero__slider swiper">
+    <section class="hero-4--5 block">
+      <div class="hero-4--5__slider swiper">
         <ul class="swiper-wrapper"> 
           <li class="swiper-slide">
-            <div class="hero__item">
-              <picture class="hero__bg-wrap"><img class="hero__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
-              <div class="hero__content">
-                <div class="hero__text-block">
-                  <h2 class="hero__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
-                  <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+            <div class="hero-4--5__item">
+              <picture class="hero-4--5__bg-wrap"><img class="hero-4--5__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
+              <div class="hero-4--5__content">
+                <div class="hero-4--5__text-block">
+                  <h2 class="hero-4--5__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
+                  <p class="hero-4--5__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
+                </div><a class="hero-4--5__btn btn btn_large btn_white" href="#">Reserve a table 
                   <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                     <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -28,13 +28,13 @@
             </div>
           </li>
           <li class="swiper-slide">
-            <div class="hero__item">
-              <picture class="hero__bg-wrap"><img class="hero__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
-              <div class="hero__content">
-                <div class="hero__text-block">
-                  <h2 class="hero__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
-                  <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+            <div class="hero-4--5__item">
+              <picture class="hero-4--5__bg-wrap"><img class="hero-4--5__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
+              <div class="hero-4--5__content">
+                <div class="hero-4--5__text-block">
+                  <h2 class="hero-4--5__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
+                  <p class="hero-4--5__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
+                </div><a class="hero-4--5__btn btn btn_large btn_white" href="#">Reserve a table 
                   <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                     <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -43,13 +43,13 @@
             </div>
           </li>
           <li class="swiper-slide">
-            <div class="hero__item">
-              <picture class="hero__bg-wrap"><img class="hero__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
-              <div class="hero__content">
-                <div class="hero__text-block">
-                  <h2 class="hero__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
-                  <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+            <div class="hero-4--5__item">
+              <picture class="hero-4--5__bg-wrap"><img class="hero-4--5__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
+              <div class="hero-4--5__content">
+                <div class="hero-4--5__text-block">
+                  <h2 class="hero-4--5__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
+                  <p class="hero-4--5__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
+                </div><a class="hero-4--5__btn btn btn_large btn_white" href="#">Reserve a table 
                   <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                     <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -58,13 +58,13 @@
             </div>
           </li>
           <li class="swiper-slide">
-            <div class="hero__item">
-              <picture class="hero__bg-wrap"><img class="hero__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
-              <div class="hero__content">
-                <div class="hero__text-block">
-                  <h2 class="hero__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
-                  <p class="hero__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
-                </div><a class="hero__btn btn btn_large btn_white" href="#">Reserve a table 
+            <div class="hero-4--5__item">
+              <picture class="hero-4--5__bg-wrap"><img class="hero-4--5__bg" src="./assets/img/hero/bg-5.jpg" alt=""></picture>
+              <div class="hero-4--5__content">
+                <div class="hero-4--5__text-block">
+                  <h2 class="hero-4--5__title">New furnishings in the main hall. There are blankets for winter gatherings</h2>
+                  <p class="hero-4--5__desc">Discover and buy from amazing makers of food, wine, knives, ceramics and more from around the world</p>
+                </div><a class="hero-4--5__btn btn btn_large btn_white" href="#">Reserve a table 
                   <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path stroke="currentColor" d="M3.75 12H20.25" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
                     <path stroke="currentColor" d="M13.5 5.25L20.25 12L13.5 18.75" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -73,14 +73,14 @@
             </div>
           </li>
         </ul>
-        <div class="hero__slider-btn-block">
-          <button class="hero__slider-btn hero__slider-btn_prev btn-arrow" type="button">
+        <div class="hero-4--5__slider-btn-block">
+          <button class="hero-4--5__slider-btn hero-4--5__slider-btn_prev btn-arrow" type="button">
             <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M20.25 12H3.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
               <path d="M10.5 5.25L3.75 12L10.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
             </svg>
           </button>
-          <button class="hero__slider-btn hero__slider-btn_next btn-arrow" type="button">
+          <button class="hero-4--5__slider-btn hero-4--5__slider-btn_next btn-arrow" type="button">
             <svg class="btn-arrow__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M3.75 12H20.25" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
               <path d="M13.5 5.25L20.25 12L13.5 18.75" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
