--- a/newsletter-1.html
+++ b/newsletter-1.html
@@ -10,28 +10,28 @@
   <body>
     <!-- Добавить к block класс block_dark-->
     <!-- Заменить класс btn_black на btn_white-->
-    <section class="newsletter section block">
-      <div class="newsletter__cotntainer container">
-        <div class="row newsletter__list">
-          <div class="col-7 col-lg newsletter__item-order">
-            <div class="newsletter__content"> 
-              <div class="newsletter__text-block"> 
-                <h2 class="newsletter__title">Be the first to know when we launch</h2>
-                <p class="newsletter__desc">We’re still building. Subscribe for updates and 20% off when we launch. No spam, we promise!</p>
+    <section class="newsletter-1 section block">
+      <div class="newsletter-1__cotntainer container">
+        <div class="row newsletter-1__list">
+          <div class="col-7 col-lg newsletter-1__item-order">
+            <div class="newsletter-1__content"> 
+              <div class="newsletter-1__text-block"> 
+                <h2 class="newsletter-1__title">Be the first to know when we launch</h2>
+                <p class="newsletter-1__desc">We’re still building. Subscribe for updates and 20% off when we launch. No spam, we promise!</p>
               </div>
-              <div class="newsletter__form-block">
-                <form class="newsletter__form" action="#"> 
+              <div class="newsletter-1__form-block">
+                <form class="newsletter-1__form" action="#"> 
                   <div class="field field_large">
-                    <label for="newsletter-email">Enter your email</label>
+                    <label class="visually-hidden" for="newsletter-email">Enter your email</label>
                     <input id="newsletter-email" type="email" name="email" placeholder="Enter your email">
                   </div>
-                  <button class="newsletter__btn btn btn_large btn_black" type="submit">Subscribe </button>
-                </form><span class="newsletter__form-desc">We care about your data in our privacy policy.</span>
+                  <button class="newsletter-1__btn btn btn_large btn_black" type="submit">Subscribe </button>
+                </form><span class="newsletter-1__form-desc">We care about your data in our privacy policy.</span>
               </div>
             </div>
           </div>
           <div class="col-5 col-lg">
-            <picutre class="newsletter__img-wrap"><img class="newsletter__img" src="./assets/img/newsletter/img-1.jpg" alt=""></picutre>
+            <picutre class="newsletter-1__img-wrap"><img class="newsletter-1__img" src="./assets/img/newsletter/img-1.jpg" alt=""></picutre>
           </div>
         </div>
       </div>
