--- a/newsletter-2.html
+++ b/newsletter-2.html
@@ -10,21 +10,21 @@
   <body>
     <!-- Добавить к block класс block_dark-->
     <!-- Заменить класс btn_black на btn_white-->
-    <section class="newsletter section block">
-      <div class="newsletter__container container">
-        <div class="newsletter__content">
-          <div class="newsletter__text-block"> 
-            <h2 class="newsletter__title">Join 2,000+ subscribers</h2>
-            <p class="newsletter__desc">Stay in the loop with everything you need to know.</p>
+    <section class="newsletter-2 section block">
+      <div class="newsletter-2__container container">
+        <div class="newsletter-2__content">
+          <div class="newsletter-2__text-block"> 
+            <h2 class="newsletter-2__title">Join 2,000+ subscribers</h2>
+            <p class="newsletter-2__desc">Stay in the loop with everything you need to know.</p>
           </div>
-          <div class="newsletter__form-block">
-            <form class="newsletter__form" action="#"> 
+          <div class="newsletter-2__form-block">
+            <form class="newsletter-2__form" action="#"> 
               <div class="field field_large">
                 <label class="visually-hidden" for="#newsletter-email"> </label>
                 <input id="newsletter-email" type="email" placeholder="Enter your email">
               </div>
               <button class="btn btn_large btn_black" type="submit">Subscribe </button>
-            </form><span class="newsletter__text">We care about your data in our privacy policy.</span>
+            </form><span class="newsletter-2__text">We care about your data in our privacy policy.</span>
           </div>
         </div>
       </div>
